--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@storybook/addon-links": "^5.0.2",
     "@storybook/addons": "^5.0.2",
     "@storybook/react": "^5.0.2",
-    "@types/redux-logger": "^3.0.7",
     "@types/jest": "24.0.11",
     "@types/node": "11.11.3",
+    "@types/node-sass": "^4.11.0",
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.2",
+    "@types/redux-logger": "^3.0.7",
     "@types/webfontloader": "^1.6.29",
     "babel-loader": "^8.0.5",
     "husky": "^1.3.1",
